TERZO ANNO/MATERIE A SCELTA/Cloud Computing [Informatica]/Laboratori/Lab7/bash-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: bash
spec:
  containers:
    - name: bash
      image: nginx
