TERZO ANNO/MATERIE A SCELTA/Cloud Computing [Informatica]/Laboratori/Lab7/simple-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-pod
spec:
  containers:
  - name: simple-pod
    image: mhausenblas/simpleservice:0.5.0
