TERZO ANNO/MATERIE A SCELTA/Cloud Computing [Informatica]/Laboratori/Lab7/simple-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-internal-service
spec:
  ports:
    - port: 80
      targetPort: 9876
  selector:
    app: simple-deployment
