TERZO ANNO/MATERIE A SCELTA/Cloud Computing [Informatica]/Laboratori/Lab7/simple-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-internal-service
            port:
              number: 80
